metadata/root/main/default/objects/Asset/fields/T__c.field-meta.xml
<CustomField>
    <fullName>T__c</fullName>
    <label>Test_reachtextarea</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>