metadata/root/main/default/objects/Asset/fields/Test_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Test_Encrypted__c</fullName>
    <label>Test_Encrypted</label>
    <length>12</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>