metadata/root/main/default/objects/Asset/fields/Test_URL__c.field-meta.xml
<CustomField>
    <fullName>Test_URL__c</fullName>
    <label>Test_URL</label>
    <type>Url</type>
</CustomField>