metadata/root/main/default/objects/Asset/fields/Textfield__c.field-meta.xml
<CustomField>
    <fullName>Textfield__c</fullName>
    <label>Textfield</label>
    <length>12</length>
    <type>Text</type>
</CustomField>