metadata/root/main/default/objects/Asset/validationRules/Assetvalidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>Assetvalidationrule</fullName>
    <active>true</active>
    <errorConditionFormula>Name = &apos;test&apos;</errorConditionFormula>
    <errorMessage>error</errorMessage>
</ValidationRule>